# prometheus-mcp

./: .dockerignore  Dockerfile  Makefile  README.md  cli.py  pyproject.toml  smoke_test.py
.github/workflows/: publish-image.yml
kube/: README.md  prometheus-mcp-single.yaml
prometheus_mcp/: __init__.py  cli.py  server.py
