[project]
name = "prometheus-mcp-investigator"
version = "0.1.4"
description = "MCP server exposing a curated surface of Prometheus HTTP APIs."
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.4",
    "httpx>=0.27",
]

[project.scripts]
prometheus-mcp = "prometheus_mcp.server:main"
prometheus-mcp-cli = "prometheus_mcp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prometheus_mcp"]
